wrap icons in spans to fix wacky layout issues in production

--- a/components/SideNavigation/SideNavigationView.css
+++ b/components/SideNavigation/SideNavigationView.css
@@ -190,6 +190,14 @@
     .side-nav-view__nav-item--active .side-nav-view__nav-item-icon:hover {
         transform: none;
     }
+
+    .side-nav-view__nav-item--active > a::before {
+        display: none;
+    }
+
+    .side-nav-view__nav-item:not(.side-nav-view__nav-item--active):hover > a::after {
+        display: none;
+    }
 }
 
 @media (max-width: 480px) {
